--- a/projects/dropdown-project/css/style.css
+++ b/projects/dropdown-project/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -256,7 +257,8 @@ body {
     gap: 15px;
     flex-direction: column;
     color: #b38b72;
-    font-family: Quicksand;
+    font-family: ubuntu;
+    line-height: 40px;
 }
 
 .animal-paragraph {
@@ -281,6 +283,7 @@ body {
 
 #ladydog {
     width: 25vw;
+    border-radius: 2%;
 }
 
 .animal-wrapper{
@@ -299,6 +302,59 @@ span {
 
 
 /* Parallax code for home page start */
+
+/* Volunteer code start */
+
+.img-animal {
+    width: 30vw;
+    border-radius: 2%;
+}
+
+#single-three {
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 40px;
+    padding-bottom: 80px;
+}
+
+.animal-vou {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+#howto {
+    text-align: center;
+    font-size: 55px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    font-family: Quicksand;
+    font-weight: 500;
+    color:#e07431;
+   
+}
+
+.one {
+    text-decoration: underline;
+    color: #e07431;
+    font-size: 30px;
+    font-family: Quicksand;
+    font-weight: 500;
+    margin-top: 20px;
+    margin-bottom:20px;
+}
+
+.paragraph1 {
+    font-size: 18px;
+    font-family: Ubuntu;
+    line-height: 30px;
+    color: #b38b72;
+    text-shadow: 1px 1px #ede5e1;
+   
+}
+
+/* Volunteer code end */
 
 /* Footer code start */
 
