--- a/projects/dropdown-project/css/style.css
+++ b/projects/dropdown-project/css/style.css
@@ -111,7 +111,8 @@ body {
 }
 
 #hero {
-    min-height: 93.1vh;
+    /* height: 100vh; */
+    /* min-height: 100vh; */
     background-size: cover;
     background-position: center center;
     display: flex;
@@ -124,7 +125,7 @@ body {
 #hero .hero-content {
     text-align: center;
     color: white;
-    padding-top: 20vh;
+    /* padding-top: 20vh; */
     text-shadow: 2px 2px black;
 }
 
@@ -360,6 +361,7 @@ span {
 #newbg {
     background-color: #e07431;
     height: 100%;
+    padding-bottom: 20px;
 }
 
 .single-column-layout {
@@ -373,8 +375,9 @@ span {
 #newbg img {
     display: block;
     margin: 0 auto;
-    padding: 50px;
-    border-radius: 13%;
+    margin-top: 50px;
+    border: 6px solid #e07431;
+   
 }
 
 #newbg h2 {
@@ -393,15 +396,119 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+} 
 
 .form {
-   background-color: #e1d6ce;
-   width: 400px;
-   height: 500px;
-   margin-bottom: 80px;
+   width: 420px;
+   height: 660px;
+   margin-bottom: 50px;
    border-radius: 2%;
+   border: 4px solid #e1d6ce;
 }
+
+.money-text {
+    font-size: 18px;
+    font-family: Ubuntu;
+    line-height: 30px;
+    color: #b38b72;
+    text-shadow: 1px 1px #ede5e1;
+    padding: 50px;
+}
+
+.thanks {
+    font-size: 25px;
+    font-family: Ubuntu;
+    line-height: 30px;
+    color: #e07431;
+    text-shadow: 1px 1px #ede5e1;
+    padding-bottom: 20px;
+}
+
+/* Donation forum start  */
+
+.donation-header {
+    text-align: center;
+    color: #e07431;
+    font-size: 30px;
+    font-family: Quicksand;
+    font-weight: 600;
+    padding-top: 30px;
+    padding-bottom: 40px;
+}
+
+#money-donate {
+   padding-left: 20px;
+   padding-right: 20px;
+
+}
+
+.name-name {
+    font-family: Ubuntu;
+}
+
+.first-name {
+    padding-bottom: 20px;
+}
+
+.last-name {
+    padding-bottom: 20px;
+}
+
+.email {
+    padding-bottom: 20px;
+}
+
+.fa-credit-card {
+    color: #e07431;
+    font-size: 25px;
+    
+}
+
+#cash {
+    margin-top: 20px;
+}
+
+#monies {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#month-cvc {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding-bottom: 15px;
+    width: 80px;
+}
+
+
+
+#submit {
+    color: white;
+    background-color: #e07431;
+    width: 100px;
+    height: 30px;
+    font-size: 15px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+.division {
+    display: flex;
+    gap: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#what-div {
+    padding-top: 20px;
+    font-size: 16px;
+}
+
+/* Donation forum end */
 
 /* Donate page end */
 
@@ -423,8 +530,96 @@ span {
     color:#e07431;
     font-family: Quicksand;
     padding-top: 5px;
-    margin-top: 10px;
+   
 
 }
 
 /* Footer code end */
+
+
+/*RESPONSIVENESS!!!!!!!! */
+
+/* Mobile responsiveness start */
+
+@media screen and (max-width: 850px) {
+    #navbar #logo {
+        color: purple;
+        font-size: 35px;
+        display: inline-block;
+        margin: 0 auto;
+    }
+
+    
+#navbar a {
+    font-size: 20px;
+}
+
+#navbar {
+    flex-direction: column;
+}
+
+.movehero {
+  position: relative;
+  top: 50px;
+  
+}
+#hero h4{
+    background-color: #ca763a4c;
+}
+
+video {
+    border: 3px solid green;
+   
+    
+}
+
+
+
+ #hero {
+    height: 47vh; 
+   
+    border: 5px solid blue;
+    
+}  
+
+#about-h2 {
+    font-size: 40px;
+}
+ 
+.text-animals {
+    display: flex;
+    gap: 18px;
+    flex-direction: row;
+} 
+
+.animal-paragraph {
+    font-size: 18px;
+    line-height: 28px;
+    text-align: center;
+    font-weight: 400;
+}
+    
+
+
+.flex-animals {
+  flex-direction:column;
+  gap: 10px;
+  border: 2px solid red;
+}
+
+#ladydog {
+    width: 30vw;
+    border-radius: 2%;
+}
+
+ .animal-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+} 
+
+
+
+}
+
+/* Mobile responsiveness end */
