--- a/projects/dropdown-project/css/style.css
+++ b/projects/dropdown-project/css/style.css
@@ -375,7 +375,8 @@ span {
     display: block;
     margin: 0 auto;
     margin-top: 50px;
-    border: 6px solid #e07431;
+    /* border: 6px solid #e07431; */
+    filter: drop-shadow(2px 2px 2px #242322);
    
 }
 
@@ -403,6 +404,7 @@ span {
    margin-bottom: 50px;
    border-radius: 2%;
    border: 4px solid #e1d6ce;
+   
 }
 
 .money-text {
