--- a/test-for-students/css/style.css
+++ b/test-for-students/css/style.css
@@ -1,518 +1,163 @@
-@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@300;400;500&family=Montaga&display=swap');
-
-* {
-    box-sizing: border-box;
-}
-
 body {
-    background-image: 
-        linear-gradient(#DDDDDD66, #DDDDDD66),
-        url("../images/granite.jpg");
-    background-size: cover;
-}
-
-/**************************************************************
-    Grid setup and grid area assignments
-**************************************************************/
-
-#grid-layout {
-    display: grid;
-    grid-template-columns: 1fr 335px 330px 335px 1fr;
-    grid-template-areas:
-        "top-left-acc header  header  header  top-right-acc"
-        "left-accent  navbar  navbar  navbar  right-accent"
-        "left-accent  banner  banner  banner  right-accent"
-        "left-accent  card-1  card-2  card-3  right-accent"
-        "left-accent  aside   blog    blog    right-accent"
-        ".            footer  footer  footer  ."
-        ".            bottom  bottom  bottom  .";
-}
-
-#top-left-accent {
-    grid-area: top-left-acc;
-}
-
-#top-right-accent {
-    grid-area: top-right-acc;
-}
-
-#header {
-    grid-area: header;
-}
-
-#nav {
-    grid-area: navbar;
-}
-
-#left-accent {
-    grid-area: left-accent;
-}
-
-#right-accent {
-    grid-area: right-accent;
-}
-
-#banner-container {
-    grid-area: banner;
-}
-
-#card-1 {
-    grid-area: card-1;
-}
-
-#card-2 {
-    grid-area: card-2;
-}
-
-#card-3 {
-    grid-area: card-3;
-}
-
-#aside {
-    grid-area: aside;
-}
-
-#main {
-    grid-area: blog;
-}
-
-#footer {
-    grid-area: footer;
-}
-
-#bottom {
-    grid-area: bottom;
-}
-
-/**************************************************************
-    Accent Border Styling
-**************************************************************/
-
-#top-left-accent {
-    border-width: 0px 2px 2px 0px;
-    border-style: solid;
-    border-image: radial-gradient(ellipse 100px 250% at bottom right, #666666EE, #66666600 50%) 1;
-
-}
-
-#top-right-accent {
-    border-width: 0px 0px 2px 2px;
-    border-style: solid;
-    border-image: radial-gradient(ellipse 100px 250% at bottom left, #666666EE, #66666600 50%) 1;
-}
-
-#left-accent {
-    border-width: 0px 2px 0px 0px;
-    border-style: solid;
-    border-image: linear-gradient(to bottom, #666666EE, #66666600 50%) 1;
-
-}
-
-#right-accent {
-    border-width: 0px 0px 0px 2px;
-    border-style: solid;
-    border-image: linear-gradient(to bottom, #666666EE, #66666600 50%) 1;
-}
-
-
-/**************************************************************
-    Header Styling
-**************************************************************/
-#header {
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-around;
-    border-width: 0px 0px 2px;
-    border-style: solid;
-    border-image: linear-gradient(to bottom, #66666611, #666666EE) 1;
-    padding: 12px;
-}
-
-#header h1 {
-    color: #1c4268;
-    text-shadow: 0px 8px 8px #33333399;
-    font-family: 'Cormorant', serif;
-    font-size: 72px;
-    font-weight: 500;
-    line-height: 60px;
-    letter-spacing: -3px;
-    transform: scale(0.95, 1.05);
-    margin: 0px;
-}
-
-#social-section {
-    text-align: right;
-}
-
-#social-section a {
-    text-decoration: none;
-}
-
-#search-bar {
-    background-color: #d4d4d4;
-    border: 0px;
-    box-shadow: 0px 0px 8px black;
-    width: 145px;
-    height: 24px;
-    margin-top: 12px;
-}
-
-#search-button {
-    cursor: pointer;
-    background-color: #253b57;
-    color: white;
-    border: 1px solid #111111;
-    height: 24px;
-}
-
-#shield-image:hover img {
-    cursor: pointer;
-    animation: spin 1s infinite;
-}
-
-@keyframes spin {
-    0% {
-    transform: scaleX(1);
-    }
-    50% {
-    transform: scaleX(-1);
-    }
-    100% {
-    transform: scale(1);
-    }
-}
-
-/**************************************************************
-    Navbar Styling
-**************************************************************/
-#nav {
-    background: radial-gradient(ellipse 150% 80%, #FFFFFF99 30%, #FFFFFF00 80%);
-    display: flex;
-    justify-content: space-around;
-}
-
-#nav a {
-    display: inline-block;
-    text-decoration: none;
-    color: black;
-    font-family: 'Montaga', serif;
-    padding: 12px 24px;
-    text-align: center;
-}
-
-#nav a:hover {
-    background: linear-gradient(#f9f9f9, #e5e5e5);
-}
-
-/**************************************************************
-    General Border/Background Styling
-**************************************************************/
-#banner-container img,
-#card-1 img,
-#card-2 img,
-#card-3 img,
-#more-appearances-container,
-#next-publication-container,
-.ad-container {
-    border: 3px solid #AAAAAA;
-    box-shadow: 0px 0px 8px black;
-}
-
-#blog {
-    border: 3px solid #333333;
-    box-shadow: 0px 0px 8px black;
-}
-
-#banner-container,
-#card-1,
-#card-2,
-#card-3,
-#aside,
-#main {
-    background-color: #00000077;
-
-}
-
-/**************************************************************
-    Banner and Cards Styling
-**************************************************************/
-#banner-container{
-    margin: 0px 12px;
-    padding: 8px;
-
-}
-
-#banner-container img {
-    width: 100%;
-}
-
-#card-1,
-#card-2,
-#card-3 {
-    padding: 8px;
-}
-
-#card-1 img,
-#card-2 img,
-#card-3 img {
-    width: 100%;
-}
-
-#card-1 {
-    margin-left: 12px;
-    padding-right: 0px;
-}
-
-#card-3 {
-    margin-right: 12px;
-    padding-left: 0px;
-}
-
-/**************************************************************
-    Sidebar (Aside) Styling
-**************************************************************/
-#aside {
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+  }
+  
+.hero {
+    height: 100vh;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%), 
+    url('../images/puppy paw background.png') no-repeat center center/cover;
+/* ... other styles */
     display: flex;
     flex-direction: column;
-    margin-left: 12px;
-    padding: 8px 0px 8px 8px;
+    justify-content: center; 
+    align-items: center;
+    color: white;
+    text-align: center;
+    position: relative;
+    background-attachment: fixed;
 }
-
-#more-appearances-container {
-    background-image: url("../images/events-bg.jpg");
-    background-position: right bottom;
-    background-repeat: no-repeat;
-    background-color: black;
-    padding: 24px;
-}
-
-#next-publication-container {
-    background-image: url("../images/releases-bg.jpg");
-    background-size: cover;
-    padding: 24px;
-    flex: 1;
-}
-
-#more-appearances-container h3 {
-    color: #d6d5c9;
-}
-
-#next-publication-container h3 {
-    color: #cbced7;
-}
-
-#more-appearances-container h3,
-#next-publication-container h3 {
-    font-family: 'Cormorant', serif;
-    font-size: 20px;
-    margin-top: 0px;
-}
-
-.side-by-side {
-    display: flex;
-    margin-bottom: 24px;
-}
-
-.side-by-side img,
-.ad-container img {
+  
+  .hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-}
-
-.side-by-side .image-container {
-    flex: 2;
-}
-
-.side-by-side .text-container {
-    flex: 5;
-    padding-left: 24px;
-}
-
-.side-by-side .text-container p {
-    margin: 2px 0px;
-}
-
-.yellow {
-    color: #dbbf73;
-}
-
-.underline {
-    text-decoration: underline;
-}
-
-.white {
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: -1;
+  }
+  
+  .navbar {
+    background: linear-gradient(90deg, #ff6a00, #ffa600);
+    padding: 15px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+  }
+  
+  .container {
+    margin-top: 60px;
+  }
+.logo {
+    font-size: 24px;
+    font-weight: 700;
     color: white;
 }
 
-.grey {
-    color: #a1a1a1;
+.paw {
+    font-size: 24px;
 }
 
-.blue {
-    color: #92add1;
+.menu {
+    display: flex;
+    align-items: center;
 }
 
-.montaga {
-    font-family: 'Montaga', serif;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.verdana {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 13px;
-}
-
-/**************************************************************
-    Blog (Main) Styling
-**************************************************************/
-#main {
-    margin-right: 12px;
-    padding: 8px;
-    height: 100%;
-}
-
-#blog {
-    background-color: lightgray;
-    padding: 24px;
-}
-
-#main h2 {
-    font-family: 'Cormorant', serif;
-    font-size: 28px;
-    margin: 12px 0px;
-    text-shadow: 0px 4px 4px #00000033;
-    letter-spacing: 2px;
-}
-
-#main h2 .caps {
-    font-size: 32px;
-}
-
-#main h3 {
-    font-family: 'Montaga', serif;
-    margin: 40px 0px 20px;
-}
-
-#main p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 13px;
-}
-
-#main h3 a,
-#main p a {
-    color: #1c4268;
-}
-
-#main h3 a {
+.menu a, .dropbtn {
+    color: white;
+    padding: 10px 15px;
     text-decoration: none;
-}
-
-#blog-button-container {
-    margin: 48px 0px;
-}
-
-/**************************************************************
-    Footer/Bottom Styling
-**************************************************************/
-#footer {
-    background: radial-gradient(ellipse 50% 80% at bottom center, #00000033, #00000000);
-    border-width: 0px 0px 2px;
-    border-style: solid;
-    border-image: linear-gradient(to right, #66666611, #333333EE, #66666611) 1;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
-    font-size: 11px;
-    letter-spacing: 2px;
-    padding: 12px;
+    background: none;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.3s ease;
 }
 
-#bottom {
-    background: url("../images/bottom.png");
-    background-size: 90%;
-    background-position: center top;
-    background-repeat: no-repeat;
-    height: 100px;
-    opacity: 0.75;
+.menu a:hover, .dropdown:hover .dropbtn {
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
 }
 
-/**************************************************************
-    Media Queries Styling
-**************************************************************/
-/* Tablet breakingpoint */
-@media screen and (max-width: 1000px) and (min-width: 801px){
-    #grid-layout {
-        grid-template-columns: 1fr 1fr 1fr;
-        display: grid;
-        grid-template-areas:
-            "header  header  header"
-            "navbar  navbar  navbar"
-            "banner  banner  banner"
-            "card-1  card-2  card-3"
-            "aside   blog    blog"
-            " footer  footer  footer"
-            "bottom  bottom  bottom";
-    }
-    #nav{
-        flex-wrap: wrap;
-    }
-    #nav a{
-        flex: 190px;
-    }
-    #header h1{
-        font-size: 46px;
-    }
-
-    body {
-        background-color: red;
-    }
+.dropdown {
+    position: relative;
+    display: inline-block;
 }
-/*Mobile Breakingpoint*/
-@media screen and (max-width: 800px){
-    #grid-layout {
-        display: grid;
-        grid-template-areas:
-            "header"
-            "navbar"
-            "banner"
-            "card-1"  
-            "card-2" 
-            "card-3"
-             "blog"
-            "aside"
-            "footer"
-            "bottom";
-            grid-template-columns: 1fr;
-    }
 
-    body {
-        background-color: green;
-    }
-    #nav{
-        flex-wrap: wrap;
-    }
-    #nav a{
-        flex: 90px;
-    }
-    #header h1{
-        font-size: 30px;
-    }
-    #search-bar,
-    #shield-image,
-    #search-button{
-        display: none;
-    }
-    #banner-container,
-    #card-3,
-    #card-2,
-    #card-1,
-    #main,
-    #aside{
-        background-color: transparent;
-        margin: 0px;
-        padding: 0px;
-    }
-    #header{
-        align-content: center;
-        flex-direction: column;
-    } 
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.dropdown-content a {
+    color: #333;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    transition: background 0.3s ease;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.hero-content h1,
+.hero-content p {
+  color: #f7931b; /* Orange color with good contrast */
+  text-decoration: none; /* Remove underline */
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); /* Optional: Subtle drop shadow */
+}
+
+.container {
+    text-align: center;
+    padding: 50px 20px;
+    max-width: 800px;
+    margin: 0 auto;
+    background: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-top: calc(100vh - 50px); /* Adjust top margin to clear the hero section */
+}
+
+.container h1 {
+    font-size: 48px;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.placeholder-img {
+    width: 100%;
+    height: auto;
+    background-color: #ddd;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #888;
+    font-size: 24px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.placeholder-img img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.container p {
+    font-size: 18px;
+    color: #555;
+    max-width: 600px;
+    margin: 0 auto;
 }
