--- a/projects/final-eval/css/style.css
+++ b/projects/final-eval/css/style.css
@@ -83,6 +83,7 @@ h1 {
 /*flexbox for images*/
 #flex_img {
     display: flex;
+    flex-direction: row;
     gap: 20px; 
     align-items: center;
     justify-content: center;
@@ -91,6 +92,7 @@ h1 {
 #saints {
     display: flex;
     flex-direction: column;
+    gap: 20px;
 }
 
 #saints_helmet {
@@ -101,12 +103,14 @@ h1 {
 #dolphins {
     display: flex;
     flex-direction: column;
-    margin-top: 42.3px;
-    gap: 20px
+    gap: 20px;
+    margin-top: 110px;
+   
+    
 }
 
 #dolphins_helmet {
-    width: 350px;
+    width: 360px;
 }
 
 #vs {
@@ -216,9 +220,21 @@ h1 {
         color:#fcfcfc;
         font-size: 20px;
     }
+
+    #dolphins {
+        margin-top: 30px;
+    }
+
+   
     
     #saints p {
         background-color: #d3bc8d;
+        padding: 0 10px;
+    }
+
+    #saints_helmet {
+        display: block;
+        margin: 0 auto;
     }
     
     #dolphins p {
@@ -239,14 +255,6 @@ h1 {
         padding: 30px;
         
     }
-
- 
-
- 
-
-
-    
-    
 
 
 }
